postgresql-common (200+deb10u2) buster; urgency=medium

  * pg_upgradecluster: Don't accidentally set (the wrong!) data_directory in
    postgresql.auto.conf.

 -- Christoph Berg <myon@debian.org>  Wed, 03 Jul 2019 15:01:03 +0200

postgresql-common (200+deb10u1) unstable; urgency=medium

  * When upgrading from stretch to buster, all text indexes need to be
    reindexed. Warn users about that in NEWS.Debian.

 -- Christoph Berg <myon@debian.org>  Fri, 12 Apr 2019 14:32:52 +0200

postgresql-common (200) unstable; urgency=medium

  * pg_createcluster: Don't refuse explicit -p argument even when port is
    already in use. (Closes: #653870)
  * pg_createcluster: Override suggested cluster start command in initdb.
    (Closes: #872660)
  * pg_upgradecluster, t/052_upgrade_encodings.t: pg_dumpall 11 retains the
    database encoding, so switching encodings via dump-restore does not work
    anymore.
  * pg_upgradecluster: Deprecate 'replacement_sort_tuples' in version 11.
  * pg_upgradecluster: Migrate postgresql.auto.conf to new cluster.
    (Closes: #810615)
  * pg_ctlcluster: Die early if logfile is not available. (Closes: #891234)
  * pg_ctlcluster: Die early if pg_ctl cannot be found. (See: #918784)
  * pg_ctlcluster: Document --skip-systemctl-redirect, and skip redirect if
    --foreground is requested.
  * pg_renamecluster: Notify systemd. (Closes: #839954)
  * pg_renamecluster: Document that cluster_name is updated as well.
  * pg_dropcluster: Delete tablespace directories. (Closes: #916449)
  * pg_dropcluster: Silence warning if data_directory is already gone.
    Spotted by Jean-Christophe Arnu, merci!
  * get_cluster_port: Fall back to 5432 if port is not defined in config.
    (Closes: #920248)
  * read_cluster_conf_file: Use cluster_data_directory instead of hardcoding
    /var/lib/postgresql.
  * postgresql@.service: Add After=network.target to ensure the server is
    stopped before networking goes down on shutdown. Thanks Elrond!
    (Closes: #910991)